# Data_Structure_and_Algorithm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.coding-ide/: settings.json
Basics/: Basics.pro  Functions.cpp  Functions.hpp  IntCell.cpp  IntCell.hpp  Makefile  Swap.hpp  Swap_impl.hpp  main.cpp  utest_Functions.c++  utest_IntCell.c++  utest_Lvalue_Rvalue_reference.c++  utest_Vector_String.c++
Book_Store/: Book_Store.sln
CPP11_MultiThreading/: Application.cpp  Application.h  CPP11_MultiThreading.sln  Dummy.cpp  Dummy.h  Makefile  MultiThreading.pro  ThreadRAII.cpp  ThreadRAII.h  Wallet.cpp  Wallet.h  async_thread_handling.cpp  async_thread_handling.h  create_async_packaged_task.cpp  create_async_packaged_task.h  event_handling.cpp  event_handling.h  join_detach_thread.cpp  join_detach_thread.h  main.cpp  pass_args_to_threads.cpp  pass_args_to_threads.h  program.cpp  race_conditions.cpp  race_conditions.h  returning_value_from_threads.cpp  returning_value_from_threads.h  thread_creation.cpp  thread_creation.h
CPP_Data_Structures_and_Algorithms/: object.cpp
Comprehensive_Text_Query/: Comprehensive_Text_Query.pro  Comprehensive_Text_Query.sln  Comprehensive_Text_Query.vcxproj  Main.cpp  TextQuery_UML_Diagram.cd
Containers/: Containers.sln
Exceptions_auto_ptr/: Auto_Ptr.cpp  Auto_Ptr.h  Exceptions_auto_ptr.pro  Exceptions_auto_ptr.sln  Exceptions_auto_ptr.vcxproj  function_throw_exception.cpp  function_throw_exception.h  main.cpp
Functions/: Function_Implementation.cpp  Function_Prototype.h  Functions.pro  main.cpp  testing.cpp  testing.h
Graph/: CMakeLists.txt  Graph.sln
Graph/graph/: CMakeLists.txt  graph_adjacent_list.c  graph_adjacent_list.cpp  graph_adjacent_list.h  graph_adjacent_list.hpp  graph_adjacent_matrix.c  graph_adjacent_matrix.cpp  graph_adjacent_matrix.h  graph_adjacent_matrix.hpp  graph_adjacent_matrix.py
Graph/test_boost_graph/: CMakeLists.txt  main.cpp  test_boost_graph.cpp
Graph/tests/: CMakeLists.txt  main.c  main.cpp  test_graph_adjacent_list.c  test_graph_adjacent_list.cpp  test_graph_adjacent_matrix.c  test_graph_adjacent_matrix.cpp
Hashing/: Hashing.pro
How2Make/: Makefile  Makefile1  buffer.h  check.c  check.h  clean.c  clean.h  command.c  command.h  defines.c  defs.h  depends.txt  display.c  files.c  insert.c  kbd.c  main.c  makefile  my_makefile  proc.c  prog1.c  prog2.c  prog2.h  search.c  sort.c  sort.h  test.c  test.h  utils.c
LinkedList/: LinkedList.sln
List/: CMakeLists.txt  List.pro  main.c  pre_defines.h
List/linked_list/: CMakeLists.txt  CircularLinkedList.c  CircularLinkedList.h  LinkedList.c  LinkedList.h  StaticLinkList.c  StaticLinkList.h  Test_CircularLinkedList.c  Test_LinkedList.c  Test_LinkedList.h  Test_StaticLinkList.c
List/sequential_list/: CMakeLists.txt  SqList.c  SqList.h  Test_SqList.c
Matrices/: Makefile  Matrices.pro  Matrix.hpp  Matrix_impl.hpp  UTest_Matrix.c++  main.cpp
Multi_Threads/: CThread.cpp  CThread.h  Multi_Threads.pro  Mutlti_Threads.sln  Mutlti_Threads.vcxproj  main.cpp  source.cpp  threads.h
Search/: hash_optimization.cpp  hash_optimization.hpp  main.cpp  search.cpp  search.hpp  test_hash_optimization.cc
SequentialContainer/: Makefile  SequentialContainer.pro  main.cpp  misc.hpp  misc_impl.hpp  utest_misc.c++
Simulate_GoogleTest/: CodeLocation.hpp  SuiteApiResolver.hpp  Test.hpp  TestFactoryBase.hpp  TestFactoryImpl.hpp  TestInfo.cpp  TestInfo.hpp  TestPartResult.hpp  TestProperty.hpp  TestResult.hpp  TypeId.hpp  TypeWithSize.hpp  gtest.cpp  gtest.hpp
Smart_Pointers/: Smart_Pointers.sln
Sort/: Sort.pro  sort_algorithms.cpp  sort_algorithms.h  testing.cpp  testing.h
Sorting/: CMakeLists.txt  main.c  main.cpp  sort_algorithms.c  sort_algorithms.cpp  sort_algorithms.h  sort_algorithms.hpp  sorting_algorithm.py  test_sort_algorithms.c  test_sort_algorithms.cpp  test_sort_algorithms.hpp
Stack/: CMakeLists.txt  main.c
Stack_and_Queue/: Stack_and_Queue.sln
StdLibs/: StdLibs.sln
String/: CMakeLists.txt  main.c  pre_defines.h
String/Sequential_String/: CMakeLists.txt  sequential_string.c  sequential_string.h  test_sequential_string.c
Templates/: List.cpp  List.h  Makefile  Screen.h  Source.cpp  Templates  Templates.pro  Templates.sln  Templates.vcxproj  UML_Class_Diagram.cd  UML_Class_Diagram.xmi  class_template.cpp  class_template.h  function_template.cpp  function_template.h  main.cpp  misc.h  testing.cpp  testing.h
Tree/: Makefile  Test.h  Tree_Project_Main.c
Trees/: CMakeLists.txt  Makefile  Trees.pro  binary_tree_node.hpp  main.c  main.cpp  tree_node.h  tree_node.hpp
Trees/Adelson_Velskii_Landis_tree/: CMakeLists.txt
Trees/Binary_Search_Tree/: binary_search_tree.hpp  binary_search_tree_impl.hpp  binary_search_tree_utest.c++
Trees/binary_search_tree/: CMakeLists.txt  element.h  tree.c  tree.h
Trees/bounding_volume_hierarchy_tree/: bvh_tree.cpp  bvh_tree.cu  bvh_tree.cuh  bvh_tree.hpp  morton_code.cpp  morton_code.hpp
Trees/red_black_tree/: CMakeLists.txt
Utility_Classes_Libraries/: Utility_Classes_Libraries.sln
algorithms_challenge/: CMakeLists.txt  compute_followed_number.cpp  main.c  main.cpp  run_tests.py  valid_parentheses.py
algorithms_challenge/fraction_calculator/: fraction_calculator.py  test_fraction_calculator.py
algorithms_challenge/interview_coding/: nstairs_unique_ways.cpp  pointer_output.c
algorithms_challenge/leetcode/: LRU_Cache.cpp  LRU_Cache.hpp  alternative_print.c  alternative_print.cpp  alternative_print.h  fast_slow_pointers.cpp  foo_bar.cpp  foo_bar.hpp  merge_k_sorted_lists.cpp  palindrome_number.cpp  plus_one.cpp  search_from_array.cpp  temperature_comparison.cpp  test_LRU_Cache.cpp  test_alternative_print.c
algorithms_challenge/practices/: MyString.cpp  MyString.hpp  function_pointer_issues.c  list_manipulation.cpp  test_MyString.cpp  valid_parentheses.cpp
alloc_mem/: CachedObj.h  Queue.h  QueueItem.h  Screen.h  Vector.h  alloc_mem  alloc_mem.pro  class_diagram.xmi  main.cpp  testing.cpp  testing.h
cmake/: FreeImage.cmake  boost.cmake  valgrind.cmake
generic_prog/: Generic_Algorithms.sln
(+565 files in other folders)
